# colqwen-visualizer

./: Cargo.toml
src/: embedded_pdf.rs  lib.rs  main.rs
